* Version 1.4

## Minor Features
* Translate error messages to English
* Improve picture loading speed by allocating all needed memory at once instead of allocating in blocks of 64 KB (DOS-era restriction)
* Error messages are now vertically centered on the screen
* Intro scrolling animation will always take 1.15 seconds, regardless of screen resolution
* Background menu balls start off centered in the screen

## Minor Bug Fixes
* Foreground grass was accidentally inefficiently calculated, causing increased load time
* Internal editor's Save As dialog box could cause buffer overflows
* Internal editor's Save As would sometimes overwrite old files without giving a warning
* Level description in internal editor is properly centered
* Internal editor marks a level as changed if the case of the level description is changed
* Pictures named "aaccbbdd" could prevent internal editor tooltip from properly updating
* Show dialog if state.dat is inaccessible when updating top10 in an internal or merging state.dat
* Background menu balls would sometimes vanish on the "Please do not distribute" screen

## Removed Legacy Features
* It is no longer possible to upgrade from across.res to elma.res
* Readme.txt is no longer autogenerated
* noretrac.inf (software backbuffer) is no longer supported